--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 FRONTEND_URL = "http://localhost:5173"
+# MONGO_URI = 'mongodb+srv://username:password@cluster0.s27bx1x.mongodb.net/SmartBin'
+PORT = 1000
