--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,5 +1,23 @@
 {
     "compilerOptions": {
+
+      "target": "es5",
+      "module": "commonjs",
+      "lib": ["dom", "dom.iterable", "esnext"],
+      "allowJs": true,
+      "skipLibCheck": true,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "strict": true,
+      "forceConsistentCasingInFileNames": true,
+      "noFallthroughCasesInSwitch": true,
+      "noImplicitReturns": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "noImplicitAny": true,
+      "jsx": "react-jsx",
+  
+  "include": ["src"],
       // ...
       "baseUrl": ".",
       "paths": {
