--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.399.0",
     "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
