--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
-<<<<<<< Updated upstream
     "@radix-ui/react-navigation-menu": "^1.2.0",
-=======
-    "@vis.gl/react-google-maps": "^1.1.0",
-    "axios": "^1.7.2",
->>>>>>> Stashed changes
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -43,6 +38,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-typed": "^2.0.12",
     "tailwind-merge": "^2.3.0",
