--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-FRONTEND_URL = "https://smartbin-ssda.onrender.com"
+FRONTEND_URL = https://smartbin-ssda.onrender.com
 MONGO_URI = 'mongodb+srv://smartbin23rd:AVDcFUKdHEVKIRY2@smartbin.az3yzqn.mongodb.net/?retryWrites=true&w=majority&appName=SmartBin'
 PORT = 1000
